fix: modal forms alignment and scroll fix

--- a/assets/css/private.css
+++ b/assets/css/private.css
@@ -1248,6 +1248,9 @@ Numbers animation
 .paynocchio-bonus-value::before {
     content: counter(v1);
 }*/
+.paynocchio-modal-open {
+    overflow: hidden;
+}
 .modal {
     width: 100%;
     height: 100%;
@@ -1257,8 +1260,16 @@ Numbers animation
     left: 0;
     display: none;
     z-index: 999999;
-    align-items: center;
+    align-items: start;
     justify-content: center;
+    overflow: auto;
+}
+.modal .close-modal {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 .modal .container {
     display: flex;
@@ -1267,6 +1278,7 @@ Numbers animation
     box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.03);
     border-radius: 0.5rem;
     overflow: hidden;
+    margin: 5rem 0;
 }
 .modal .container.zoom {
     transform: scale(0.5);
